# binding-ladder

./: .gitignore  Cargo.toml  DECISIONS.md  README.md  SPIKE.md  binding-ladder-spec.md  rust-toolchain.toml
harness/: Cargo.toml  asm_hotpath.py  assemble_table.py  baseline_compile.py  boilerplate.py  compile_time_bench.py  dag_compile.py  gen_baseline.py  gen_dag.py  gen_levels.py  gen_manual.py  manual_compile.py
harness/results/: asm_hotpath.json  baseline_compile.json  boilerplate.json  compile_time.json  compile_time_spike_1.75.json  cost_table.json  cost_table.md  dag_compile.json  manual_topology.json  rung2_control_detect_off.json  rung2_control_detect_on.json  runtime_bench.json
harness/src/: lib.rs  runtime_bench.rs
harness/src/rigidity/: legit_program_rejected.rs  mod.rs  still_allows_cyclic_order.rs  still_allows_drop_order.rs
invariants/deadlock/rung1_convention/: Cargo.toml
invariants/deadlock/rung1_convention/src/: lib.rs
invariants/deadlock/rung2_runtime/: Cargo.toml
invariants/deadlock/rung2_runtime/src/: lib.rs
invariants/deadlock/rung4_typestate/: Cargo.toml
invariants/deadlock/rung4_typestate/src/: lib.rs
invariants/deadlock/rung5_eliminated/: Cargo.toml
invariants/deadlock/rung5_eliminated/src/: lib.rs
invariants/risk_check/rung1_convention/: Cargo.toml
invariants/risk_check/rung1_convention/src/: lib.rs
invariants/risk_check/rung4_typestate/: Cargo.toml
invariants/risk_check/rung4_typestate/src/: lib.rs
pl_control/: Cargo.toml
pl_control/src/: main.rs
probe/: Cargo.toml
probe/src/: lib.rs
