[package]
name = "pl_control"
version = "0.1.0"
edition.workspace = true

# Separate control crate, not a dependency of harness, so parking_lot's
# deadlock_detection feature can be toggled per build without feature unification
# dragging it in from rung2_runtime. Build twice:
#   cargo run --release -p pl_control                    detection off
#   cargo run --release -p pl_control --features detect  detection on

[dependencies]
parking_lot = "0.12"

[features]
detect = ["parking_lot/deadlock_detection"]

[[bin]]
name = "pl_control"
path = "src/main.rs"
