[package]
name = "pl_control"
version = "0.1.0"
edition.workspace = true

# kept out of harness's dep graph so deadlock_detection can be toggled per build
# without feature unification dragging it in from rung2_runtime

[dependencies]
parking_lot = "0.12"

[features]
detect = ["parking_lot/deadlock_detection"]

[[bin]]
name = "pl_control"
path = "src/main.rs"
